--- a/index.html
+++ b/index.html
@@ -448,10 +448,19 @@ class QuadPotentialDiagAdapt:
             <video autoplay loop>
                 <source src="img/rocket.mp4" type="video/mp4" />
             </video>
-
-
         </section>
     </article>
 </body>
+<footer>
+    <script type="text/javascript">
+  document._EUGO = 'b165094c741eb9eea96d';
+  document.head.appendChild(function() {
+    var s = document.createElement('script');
+    s.src = 'https://eugo.io/eugo.js';
+    s.async = 1;
+    return s;
+  }());
+</script>
+</footer>
 
 </html>
